@@ -56,7 +56,7 @@ int      getresuid(uid_t *, uid_t *, uid_t *);
 void    *setmode(const char *);
 int      setresgid(gid_t, gid_t, gid_t);
 int      setresuid(uid_t, uid_t, uid_t);
-int      pledge(const char *, const char *[]);
+int      openbsd_pledge(const char *, const char *);
 
 #  ifndef _GETOPT_DEFINED_
 #   define _GETOPT_DEFINED_
